<?xml version="1.0"?>
<package format="2">
  <name>hello_pkg</name>
  <version>0.0.0</version>
  <description>The hello_pkg package</description>

  <maintainer email="kdh@es.aau.dk">Karl D. Hansen</maintainer>

  <license>MIT</license>

  <author email="kdh@es.aau.dk">Karl D. Hansen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>

  <export>

  </export>
</package>
